--- a/video_rental_analysis.ipynb
+++ b/video_rental_analysis.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "dc4fd6ca-b64d-41ac-a3ff-7dbb8ee36165",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "4b39e39e-1f17-4c7a-b3a7-209427b64f01",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "42a3ec4e-f9cd-409c-b919-4a8c07340da9",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "300422e1-da1f-4eef-9a42-2c58461454f1",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "48d2a744-348d-4596-850a-dcc3a13b7a81",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "9a2d6ebf-89db-4607-ae19-d38a3f277e44",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "1a80932a-8cb5-4ccc-942b-29a8656de091",
    "metadata": {},
    "outputs": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "6cd18920-f54e-449f-9747-d8cccac2f360",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,7 @@
        "avg_payment_amount            4.63              4.29           3.95"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "fcac68bc-b73e-439a-987c-b5f09fff9cd7",
    "metadata": {},
    "outputs": [],
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "f8bd3fc2-2a2a-4c34-a08b-324ee04000ce",
    "metadata": {},
    "outputs": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "20132af3-a11d-4076-8a0f-6ce3a039e353",
    "metadata": {},
    "outputs": [
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "c57e9545-a1ef-407c-b9a5-7876ac7aeb14",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "9cc1f16f-f12e-4d7d-a6d9-64409d919593",
    "metadata": {},
    "outputs": [
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "cabee13f-880f-4dd8-a9b7-5dfd442711bf",
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "f792a26c-11ea-4b0d-8f78-7b09d1f45be3",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "74dfe432-31d0-4134-b45a-5c7665581cd4",
    "metadata": {},
    "outputs": [
@@ -1214,35 +1214,35 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_4e2eb\">\n",
+       "<table id=\"T_87631\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_4e2eb_level0_col0\" class=\"col_heading level0 col0\" >Сумма рангов (Monday)</th>\n",
-       "      <th id=\"T_4e2eb_level0_col1\" class=\"col_heading level0 col1\" >Сумма рангов (Wednesday)</th>\n",
-       "      <th id=\"T_4e2eb_level0_col2\" class=\"col_heading level0 col2\" >U</th>\n",
-       "      <th id=\"T_4e2eb_level0_col3\" class=\"col_heading level0 col3\" >Z</th>\n",
-       "      <th id=\"T_4e2eb_level0_col4\" class=\"col_heading level0 col4\" >p-value</th>\n",
-       "      <th id=\"T_4e2eb_level0_col5\" class=\"col_heading level0 col5\" >N (Monday)</th>\n",
-       "      <th id=\"T_4e2eb_level0_col6\" class=\"col_heading level0 col6\" >N (Wednesday)</th>\n",
+       "      <th id=\"T_87631_level0_col0\" class=\"col_heading level0 col0\" >Сумма рангов (Monday)</th>\n",
+       "      <th id=\"T_87631_level0_col1\" class=\"col_heading level0 col1\" >Сумма рангов (Wednesday)</th>\n",
+       "      <th id=\"T_87631_level0_col2\" class=\"col_heading level0 col2\" >U</th>\n",
+       "      <th id=\"T_87631_level0_col3\" class=\"col_heading level0 col3\" >Z</th>\n",
+       "      <th id=\"T_87631_level0_col4\" class=\"col_heading level0 col4\" >p-value</th>\n",
+       "      <th id=\"T_87631_level0_col5\" class=\"col_heading level0 col5\" >N (Monday)</th>\n",
+       "      <th id=\"T_87631_level0_col6\" class=\"col_heading level0 col6\" >N (Wednesday)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_4e2eb_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_4e2eb_row0_col0\" class=\"data row0 col0\" >616.000000</td>\n",
-       "      <td id=\"T_4e2eb_row0_col1\" class=\"data row0 col1\" >560.000000</td>\n",
-       "      <td id=\"T_4e2eb_row0_col2\" class=\"data row0 col2\" >316.000000</td>\n",
-       "      <td id=\"T_4e2eb_row0_col3\" class=\"data row0 col3\" >0.577350</td>\n",
-       "      <td id=\"T_4e2eb_row0_col4\" class=\"data row0 col4\" >0.570048</td>\n",
-       "      <td id=\"T_4e2eb_row0_col5\" class=\"data row0 col5\" >24</td>\n",
-       "      <td id=\"T_4e2eb_row0_col6\" class=\"data row0 col6\" >24</td>\n",
+       "      <th id=\"T_87631_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_87631_row0_col0\" class=\"data row0 col0\" >616.000000</td>\n",
+       "      <td id=\"T_87631_row0_col1\" class=\"data row0 col1\" >560.000000</td>\n",
+       "      <td id=\"T_87631_row0_col2\" class=\"data row0 col2\" >316.000000</td>\n",
+       "      <td id=\"T_87631_row0_col3\" class=\"data row0 col3\" >0.577350</td>\n",
+       "      <td id=\"T_87631_row0_col4\" class=\"data row0 col4\" >0.570048</td>\n",
+       "      <td id=\"T_87631_row0_col5\" class=\"data row0 col5\" >24</td>\n",
+       "      <td id=\"T_87631_row0_col6\" class=\"data row0 col6\" >24</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x18667b514c0>"
+       "<pandas.io.formats.style.Styler at 0x26f59f49a00>"
       ]
      },
      "metadata": {},
@@ -1321,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "2cfc7088-5932-4bd0-b5e2-4fd2fc1af16f",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "c79199a7-d10e-4ddd-99be-ad3516b652bf",
    "metadata": {},
    "outputs": [
@@ -1394,40 +1394,40 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_a89b2_row0_col4 {\n",
+       "#T_965b6_row0_col4 {\n",
        "  color: red;\n",
        "  font-weight: bold;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_a89b2\">\n",
+       "<table id=\"T_965b6\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_a89b2_level0_col0\" class=\"col_heading level0 col0\" >Сумма рангов (A — High value)</th>\n",
-       "      <th id=\"T_a89b2_level0_col1\" class=\"col_heading level0 col1\" >Сумма рангов (B — Medium value)</th>\n",
-       "      <th id=\"T_a89b2_level0_col2\" class=\"col_heading level0 col2\" >U</th>\n",
-       "      <th id=\"T_a89b2_level0_col3\" class=\"col_heading level0 col3\" >Z</th>\n",
-       "      <th id=\"T_a89b2_level0_col4\" class=\"col_heading level0 col4\" >p-value</th>\n",
-       "      <th id=\"T_a89b2_level0_col5\" class=\"col_heading level0 col5\" >N (A — High value)</th>\n",
-       "      <th id=\"T_a89b2_level0_col6\" class=\"col_heading level0 col6\" >N (B — Medium value)</th>\n",
+       "      <th id=\"T_965b6_level0_col0\" class=\"col_heading level0 col0\" >Сумма рангов (A — High value)</th>\n",
+       "      <th id=\"T_965b6_level0_col1\" class=\"col_heading level0 col1\" >Сумма рангов (B — Medium value)</th>\n",
+       "      <th id=\"T_965b6_level0_col2\" class=\"col_heading level0 col2\" >U</th>\n",
+       "      <th id=\"T_965b6_level0_col3\" class=\"col_heading level0 col3\" >Z</th>\n",
+       "      <th id=\"T_965b6_level0_col4\" class=\"col_heading level0 col4\" >p-value</th>\n",
+       "      <th id=\"T_965b6_level0_col5\" class=\"col_heading level0 col5\" >N (A — High value)</th>\n",
+       "      <th id=\"T_965b6_level0_col6\" class=\"col_heading level0 col6\" >N (B — Medium value)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_a89b2_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_a89b2_row0_col0\" class=\"data row0 col0\" >17135.000000</td>\n",
-       "      <td id=\"T_a89b2_row0_col1\" class=\"data row0 col1\" >61075.000000</td>\n",
-       "      <td id=\"T_a89b2_row0_col2\" class=\"data row0 col2\" >16054.000000</td>\n",
-       "      <td id=\"T_a89b2_row0_col3\" class=\"data row0 col3\" >11.028201</td>\n",
-       "      <td id=\"T_a89b2_row0_col4\" class=\"data row0 col4\" >0.000000</td>\n",
-       "      <td id=\"T_a89b2_row0_col5\" class=\"data row0 col5\" >46</td>\n",
-       "      <td id=\"T_a89b2_row0_col6\" class=\"data row0 col6\" >349</td>\n",
+       "      <th id=\"T_965b6_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_965b6_row0_col0\" class=\"data row0 col0\" >17135.000000</td>\n",
+       "      <td id=\"T_965b6_row0_col1\" class=\"data row0 col1\" >61075.000000</td>\n",
+       "      <td id=\"T_965b6_row0_col2\" class=\"data row0 col2\" >16054.000000</td>\n",
+       "      <td id=\"T_965b6_row0_col3\" class=\"data row0 col3\" >11.028201</td>\n",
+       "      <td id=\"T_965b6_row0_col4\" class=\"data row0 col4\" >0.000000</td>\n",
+       "      <td id=\"T_965b6_row0_col5\" class=\"data row0 col5\" >46</td>\n",
+       "      <td id=\"T_965b6_row0_col6\" class=\"data row0 col6\" >349</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1866ab20f20>"
+       "<pandas.io.formats.style.Styler at 0x26f602533e0>"
       ]
      },
      "metadata": {},
@@ -1448,9 +1448,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a830168-440e-4780-ba9e-07ba57115a26",
+   "metadata": {},
+   "source": [
+    "## Итоги исследования\n",
+    "\n",
+    "В ходе анализа были изучены четыре датасета сети видеопроката:\n",
+    "\n",
+    "1. **`rental_activity_by_weekday_and_hour`** — количество аренд по дням недели и часам.\n",
+    "2. **`revenue_by_category`** — выручка по категориям фильмов.\n",
+    "3. **`revenue_by_genre_per_month`** — выручка по жанрам и по месяцам.\n",
+    "4. **`customer_ltv`** — информация о клиентах, их сегментах LTV и выручке.\n",
+    "\n",
+    "Проведён **исследовательский анализ данных**, включающий:\n",
+    "\n",
+    "- описательные статистики по основным метрикам;\n",
+    "- визуализацию распределений и динамики показателей.\n",
+    "\n",
+    "Были проверены **две гипотезы** и установлено, что:\n",
+    "\n",
+    "- среднее количество аренд в понедельник **статистически значимо не отличается** от среднего количества аренд в среду;\n",
+    "- средняя общая выручка клиентов сегмента High value **статистически значимо больше** выручки клиентов сегмента Medium value."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8be6af7-afcc-4d2c-82f2-2debaf4eca10",
+   "id": "1f9c2c35-976e-4215-b811-ed19a3a9bf17",
    "metadata": {},
    "outputs": [],
    "source": []
